[gd_scene load_steps=6 format=2]

[ext_resource path="res://scenes/entities/enemies/ai/ai.gd" type="Script" id=1]
[ext_resource path="res://scenes/entities/enemies/ai/states/state_disabled.gd" type="Script" id=2]
[ext_resource path="res://scenes/entities/enemies/ai/states/state_attack.gd" type="Script" id=4]

[sub_resource type="CircleShape2D" id=1]
radius = 100.0

[sub_resource type="CircleShape2D" id=2]
radius = 20.0

[node name="AI" type="Node2D"]
script = ExtResource( 1 )

[node name="PlayerDetectionArea" type="Area2D" parent="."]
collision_layer = 0
collision_mask = 2

[node name="CollisionShape2D" type="CollisionShape2D" parent="PlayerDetectionArea"]
shape = SubResource( 1 )

[node name="EnemyDetectionArea" type="Area2D" parent="."]
collision_layer = 0
collision_mask = 4

[node name="CollisionShape2D" type="CollisionShape2D" parent="EnemyDetectionArea"]
shape = SubResource( 2 )

[node name="StateDisabled" type="Node" parent="."]
script = ExtResource( 2 )

[node name="StateAttack" type="Node" parent="."]
script = ExtResource( 4 )

[node name="CalculatePathTimer" type="Timer" parent="."]
wait_time = 0.12
[connection signal="body_entered" from="PlayerDetectionArea" to="." method="_on_PlayerDetectionArea_body_entered"]
[connection signal="body_entered" from="EnemyDetectionArea" to="." method="_on_EnemyDetectionArea_body_entered"]
[connection signal="body_exited" from="EnemyDetectionArea" to="." method="_on_EnemyDetectionArea_body_exited"]
[connection signal="timeout" from="CalculatePathTimer" to="." method="_on_CalculatePathTimer_timeout"]
